Code Refactor & Cleanup